Fix submenu popover z-indexing.
#134

--- a/sources/stylesheets/components/_menu-level-1.scss
+++ b/sources/stylesheets/components/_menu-level-1.scss
@@ -3,6 +3,9 @@
 // =============================================================================
 .menu-level-1 {
   > .menu-item {
+    position: relative;
+    z-index: 1;
+
     &:hover {
       > a {
         opacity: .75;
